WIP update to 1.20.6.
Very WIP, a few things need to be completely redone (pain) and I'll need to test everything to make sure the networking actually works (which I doubt, will probably need to change some stuff).